# wow_benchmark

./: .gitignore  CMakeLists.txt  README  README.md
exp/: analyze_dataset.sh  build_index.sh  gen_iranges.py  run-perf.sh  run_correlation.sh  run_naive.sh  run_naive_commonattr.sh  run_naive_correlation.sh  runhnsw.sh  search.sh
result/: arxiv_varying_efc.csv  arxiv_varying_m.csv  arxiv_varying_o.csv  common_plot.py  deep10m_varying_efc.csv  deep10m_varying_m.csv  deep10m_varying_o.csv  gist_hop_layer_wow.txt  gist_hop_layer_wow_wo_cn.txt  gist_hop_layer_wow_wo_cn_next.txt  gist_hop_layer_wow_wo_next.txt  gist_hop_layer_wow_wo_sel.txt  gist_varying_efc.csv  gist_varying_m.csv  gist_varying_o.csv  lid_gist.csv  lid_sift.csv  plot_ablation_hop_layer.py  plot_correlation.py  plot_dc_lid.py  plot_duplicate_values.py  plot_layer_selection.py  plot_method_in_one_fig.py  plot_oracle_hnsw.py  plot_parameter.py  plot_parameter_combined.py  plot_varying_k.py  sift_varying_efc.csv  sift_varying_m.csv  sift_varying_o.csv  wiki4m_varying_efc.csv  wiki4m_varying_m.csv  wiki4m_varying_o.csv
result/arxiv_log_csv_common/spatt-pp-11-16-4-dy/: c100.csv
result/arxiv_log_csv_k10/acorn/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/digra-static/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/hsig-16/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/irange-16/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/milvus-hnsw/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/oracle_hnsw/: 17.csv
result/arxiv_log_csv_k10/postfiltering/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/prefiltering/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/rangepq/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/serf/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/spatt-layered-11-16-4-dy/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/spatt-layered-21-16-2-dy/: 0.csv  17.csv
result/arxiv_log_csv_k10/spatt-layered-7-16-8-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-128-4-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-1024-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-128-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-16-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-2048-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-32-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-512-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-64-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-dy/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-dy-wo_cn_next/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-dy-wo_ld/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-16-4-dy-wo_next/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-24-4-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-32-4-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-4-4-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-48-4-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-64-4-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-11-8-4-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-21-16-2-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-6-16-12-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-6-16-14-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-6-16-16-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-7-16-10-dy/: 17.csv
result/arxiv_log_csv_k10/spatt-pp-7-16-8-dy/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/arxiv_log_csv_k10/spatt-pp-8-16-6-dy/: 17.csv
result/arxiv_log_csv_k10/super-postfiltering/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/deep100m_log_csv_k10/spatt-pp-13-16-4-dy/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/deep10m_log_csv_k10/acorn/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/deep10m_log_csv_k10/digra-static/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/deep10m_log_csv_k10/hsig-16/: 0.csv  1.csv  10.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/deep10m_log_csv_k10/irange-16/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
result/deep10m_log_csv_k10/irange-16-meta/: 17.csv
result/deep10m_log_csv_k10/milvus-hnsw/: 0.csv  1.csv  10.csv  (+15 more)
src/: CMakeLists.txt  buildindex.cc  buildspattplus.cc  searchindex.cc  searchspattplus.cc
src/apps/: CMakeLists.txt  analyze_dataset.cc  gen_correlation_query.cc  gtmanager.cc  gtmanager.hh  run_naive_common.cc  runhnsw.cc
src/common/: config.hh  dataloader.hh  disk.hh  memory.hh  micro.hh  result.hh  type.hh
src/spatt/: CMakeLists.txt  index.hh  indexbuilder.hh  indexsearcher.hh
src/spattplus/: CMakeLists.txt  order_table.hh  spattplusbuilder.hh  spattplusindex.hh  spattplussearcher.hh
(+1225 files in other folders)
