add_executable(gtmanager gtmanager.cc)
target_link_libraries(gtmanager spatt)
add_executable(runhnsw runhnsw.cc)
target_link_libraries(runhnsw spatt)
add_executable(runnaive run_naive.cc)
target_link_libraries(runnaive spatt)
add_executable(runnaive_common run_naive_common.cc)
add_executable(gen_corquery gen_correlation_query.cc)
target_link_libraries(gen_corquery spatt)
target_link_libraries(runnaive_common spatt)
add_executable(analyze_dataset analyze_dataset.cc)
target_link_libraries(analyze_dataset spatt)